<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="ltr">

    <TextView
        android:id="@+id/DENLExam_titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrance_exam_start_new_title"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textDirection="rtl"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="72dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        />
    <Button
        android:id="@+id/DENLExam_startExamButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrance_exam_start_new"
        android:textSize="15sp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/concough_border_outline_style"
        app:layout_constraintTop_toBottomOf="@id/DENLExam_titleTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24sp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        />
    <Button
        android:id="@+id/DENLExam_cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_nevermind"
        android:textSize="15sp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/concough_border_outline_gray_style"
        app:layout_constraintTop_toBottomOf="@id/DENLExam_startExamButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16sp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        />

</android.support.constraint.ConstraintLayout>