<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/itemELECDQuestion_questionTextView"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:text=""
            />

        <LinearLayout
            android:id="@+id/itemELECDQuestion_section1"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/itemELECDQuestion_questionTextView"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            >

            <TextView
                android:id="@+id/itemELECDQuestion_answer1TextView"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:textColor="@color/colorConcoughGray2"
                android:textSize="13sp"
                android:background="@drawable/concough_border_radius_full_2gray_style"
                android:text="@string/entrance_exam_answer1"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="center"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/itemELECDQuestion_answer2TextView"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:textColor="@color/colorConcoughGray2"
                android:textSize="13sp"
                android:background="@drawable/concough_border_radius_full_2gray_style"
                android:text="@string/entrance_exam_answer2"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="center"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/itemELECDQuestion_answer3TextView"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:textColor="@color/colorConcoughGray2"
                android:textSize="13sp"
                android:background="@drawable/concough_border_radius_full_2gray_style"
                android:text="@string/entrance_exam_answer3"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="center"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/itemELECDQuestion_answer4TextView"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:textColor="@color/colorConcoughGray2"
                android:textSize="13sp"
                android:background="@drawable/concough_border_radius_full_2gray_style"
                android:text="@string/entrance_exam_answer4"
                android:textAlignment="center"
                android:gravity="center"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/itemELECDQuestion_helpImageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/help_icon"
            app:srcCompat="@drawable/help_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/itemELECDQuestion_section1"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>