<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/container"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/resetPasswordA_activity_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@android:color/background_light"
            android:fitsSystemWindows="true"
            android:isScrollContainer="true"
            tools:context="com.concough.android.concough.LoginActivity">

            <ImageView
                android:id="@+id/resetPasswordA_imageView4"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="40dp"
                android:scaleType="fitCenter"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/app_dropbox_icon"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:id="@+id/resetPasswordA_changePasswordTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/resetPasswordA_S_changePasswordTextView"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textDirection="rtl"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resetPasswordA_imageView4" />


            <LinearLayout
                android:id="@+id/resetPasswordA_linearLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resetPasswordA_changePasswordTextView"
                app:layout_constraintHorizontal_bias="0.0">

                <EditText
                    android:id="@+id/resetPasswordA_passwordEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:gravity="start"
                    android:hint="@string/resetPasswordA_S_passwordEdit"

                    android:inputType="text|textPassword"
                    android:textAlignment="textEnd"
                    android:textDirection="rtl"
                    android:textSize="18sp" />


                <EditText
                    android:id="@+id/resetPasswordA_passwordEditConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:gravity="start"
                    android:hint="@string/resetPasswordA_S_passwordEditConfirm"
                    android:inputType="text|textPassword"
                    android:textAlignment="textEnd"

                    android:textDirection="rtl"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/resetPasswordA_saveButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/concough_border_outline_style"
                    android:text="@string/resetPasswordA_S_saveButton"
                    android:textSize="16sp" />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
