<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/resetPasswordA_activity_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@android:color/background_light"
            android:fitsSystemWindows="true"
            android:isScrollContainer="true"
            tools:context="com.concough.android.concough.LoginActivity">


            <LinearLayout
                android:id="@+id/errorReport_linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/settingChangePasswordA_changePassLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/settingA_S_changePassword"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/errorReport_imageView4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/app_dropbox_icon"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="81dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/errorReport_linearLayout4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/errorReport_linearLayout2">

                <View
                    android:id="@+id/errorReport_view"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@color/colorConcoughGray"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/resetPasswordA_linearLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/errorReport_linearLayout4">

                <EditText
                    android:id="@+id/settingChangePasswordA_passwordEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:ems="10"

                    android:hint="@string/settingChangePasswordA_S_passwordEdit"
                    android:inputType="text|textPassword"
                    android:textAlignment="textStart"
                    android:textDirection="rtl"
                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/settingChangePasswordA_passwordEditConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:hint="@string/settingChangePasswordA_S_passwordEditConfirm"
                    android:inputType="text|textPassword"
                    android:textAlignment="textStart"

                    android:textDirection="rtl"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/settingChangePasswordA_saveButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/concough_border_outline_style"
                    android:text="@string/resetPasswordA_S_saveButton"
                    android:textSize="16sp" />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
